Fix: cors config